cmake_minimum_required(VERSION 3.16)
project(Ejercicio5)

set(CMAKE_CXX_STANDARD 14)

add_executable(Ejercicio5 main.cpp ComputerException.cpp ComputerException.h InputException.cpp InputException.h OutputException.cpp OutputException.h ProcessorException.cpp ProcessorException.h Prueba.cpp Prueba.h)